# SupercomputersPMI_2018

./: .codenvy.json  .gitpod.Dockerfile  .gitpod.yml  Block.cpp  BlockMatrix.cpp  BlockMatrix.h  BlockMatrixcpp.cpp  Check.cpp  ChronoTiime.cpp  Create.cpp  Debug.cpp  Demyanenko.docx  EmelyanovM_IndTask31.DOCX  FastMatrix.cpp  FedyashovIndTask_Var47.docx  Grigorchuk.cpp  Kernel.cpp  Laskovets_otchet-1.docx  MPI1Proc1.cpp  MPI1Proc9.cpp  MPI2Send1.cpp  MPI2Send14.cpp  MPI2Send15.cpp  MPI2Send6.cpp  MPI2Send8.cpp  MPI3Coll1.cpp  MPI3Coll13.cpp  MPI3Coll15.cpp  MPI3Coll18.cpp  MPI3Coll4.cpp  MPI3Coll8.cpp  MPI3Coll9.cpp  MPI4Type10.cpp  MPI4Type12.cpp  MPI4Type2.cpp  MPI4Type4.cpp  MPI4Type8.cpp  MPI5Comm1.cpp  MPI5Comm11.cpp  MPI5Comm13.cpp  (+56 more)
EmelyanovM_IndTask31/: EmelyanovM_IndTask31.sln
Galicky_Int_Task_Var_28/: Check.cpp  Create.cpp  Galicky_Int_Task_Var_28.sln  Galicky_Int_Task_Var_28.vcxproj  Galicky_Int_Task_Var_28.vcxproj.filters  Multiple.cpp  MultipleBLOCK.cpp  MultipleKERNEL.cpp  TimeQuantMS1.h  TimeQuantMS2.h  matrix.h  pch.cpp  pch.h  Умножение матриц с использованием OpenMP.docx
IndivTask46Tihonov Version 2/: CMakeCache.txt  CMakeLists.txt  TihonovOtchet.docx  clang_double.csv  clang_float.csv  gcc_double.csv  gcc_float.csv  main.cpp  Запуск
IndivTask46Tihonov Version 2/gcc/: CMakeCache.txt  Makefile  cmake_install.cmake  main
IndivTask46Tihonov Version 2/lib/: BlockMatrix.h  ParallelInnerMultiplier.h  ParallelOuterMultiplier.h  SequentialMultiplier.h  SymmetricMatrix.h  UpperTriangleMatrix.h
IndivTask46Tihonov Version 2/python/: generate.py  math.ipynb
(+307 files in other folders)
